[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Update ke 0.5.2
crosstown_bus = "0.5.2" 
futures = "0.3"
# Gunakan versi borsh yang konsisten (0.10 ke atas direkomendasikan jika memungkinkan)
borsh = "0.10.3"
borsh-derive = "0.10.3"
tokio = { version = "1.21.2", features = ["full"] }